# filtros2

./: README.md  test.rpp  test.rpp-bak
filtros2/: CMakeLists.txt
filtros2/resource/: editor.uidesc
filtros2/source/: cids.h  controller.cpp  controller.h  entry.cpp  filtros.hpp  filtrosSOS.hpp  processor.cpp  processor.h  version.h
